@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>390</width>
-    <height>378</height>
+    <height>700</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -118,6 +118,124 @@
          </item>
         </layout>
        </item>
+       <item row="3" column="0" colspan="2">
+        <widget class="QGroupBox" name="groupBox_serialDataBits">
+         <property name="title">
+          <string>Data Bits</string>
+         </property>
+         <layout class="QHBoxLayout" name="horizontalLayout_4">
+          <item>
+           <widget class="QRadioButton" name="radioButton_dataBits7">
+            <property name="text">
+             <string>7</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="radioButton_dataBits8">
+            <property name="text">
+             <string>8</string>
+            </property>
+            <property name="checked">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item row="5" column="0" colspan="2">
+        <widget class="QGroupBox" name="groupBox_serialStopBits">
+         <property name="title">
+          <string>Stop Bits</string>
+         </property>
+         <layout class="QHBoxLayout" name="horizontalLayout_5">
+          <item>
+           <widget class="QRadioButton" name="radioButton_stopBits1">
+            <property name="text">
+             <string>1</string>
+            </property>
+            <property name="checked">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="radioButton_stopBits2">
+            <property name="text">
+             <string>2</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item row="6" column="0" colspan="2">
+        <widget class="QGroupBox" name="groupBox_serialHandshake">
+         <property name="title">
+          <string>Handshake</string>
+         </property>
+         <layout class="QGridLayout" name="gridLayout">
+          <item row="1" column="0">
+           <widget class="QRadioButton" name="radioButton_handshakeXonXoff">
+            <property name="text">
+             <string>XON/XOFF</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1">
+           <widget class="QRadioButton" name="radioButton_handshakeHardware">
+            <property name="text">
+             <string>Hardware</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="0">
+           <widget class="QRadioButton" name="radioButton_handshakeNone">
+            <property name="text">
+             <string>None</string>
+            </property>
+            <property name="checked">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item row="4" column="0" colspan="2">
+        <widget class="QGroupBox" name="groupBox_serialParity">
+         <property name="title">
+          <string>Parity</string>
+         </property>
+         <layout class="QGridLayout" name="gridLayout_2">
+          <item row="2" column="0">
+           <widget class="QRadioButton" name="radioButton_parityOdd">
+            <property name="text">
+             <string>Odd</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1">
+           <widget class="QRadioButton" name="radioButton_parityEven">
+            <property name="text">
+             <string>Even</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QRadioButton" name="radioButton_parityNone">
+            <property name="text">
+             <string>None</string>
+            </property>
+            <property name="checked">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
       </layout>
      </widget>
      <widget class="QWidget" name="tab_tcp">
@@ -215,16 +333,6 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
-       <widget class="QCheckBox" name="checkBox_autoPowerOn">
-        <property name="toolTip">
-         <string>Auto power-on on startup</string>
-        </property>
-        <property name="text">
-         <string>Auto power ON</string>
-        </property>
-       </widget>
-      </item>
       <item row="1" column="0">
        <widget class="QCheckBox" name="checkBox_autoConnect">
         <property name="toolTip">
@@ -232,6 +340,16 @@
         </property>
         <property name="text">
          <string>Auto connect</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QCheckBox" name="checkBox_autoPowerOn">
+        <property name="toolTip">
+         <string>Auto power-on on startup</string>
+        </property>
+        <property name="text">
+         <string>Auto power ON</string>
         </property>
        </widget>
       </item>
@@ -251,11 +369,25 @@
   </layout>
  </widget>
  <tabstops>
+  <tabstop>comboBox_rigModel</tabstop>
   <tabstop>tabWidget_Config</tabstop>
   <tabstop>comboBox_comPort</tabstop>
   <tabstop>comboBox_serialSpeed</tabstop>
   <tabstop>lineEdit_civAddr</tabstop>
+  <tabstop>radioButton_dataBits7</tabstop>
+  <tabstop>radioButton_dataBits8</tabstop>
+  <tabstop>radioButton_parityNone</tabstop>
+  <tabstop>radioButton_parityOdd</tabstop>
+  <tabstop>radioButton_parityEven</tabstop>
+  <tabstop>radioButton_stopBits1</tabstop>
+  <tabstop>radioButton_stopBits2</tabstop>
+  <tabstop>radioButton_handshakeNone</tabstop>
+  <tabstop>radioButton_handshakeXonXoff</tabstop>
+  <tabstop>radioButton_handshakeHardware</tabstop>
   <tabstop>spinBox_RefreshRate</tabstop>
+  <tabstop>checkBox_fullPoll</tabstop>
+  <tabstop>checkBox_autoConnect</tabstop>
+  <tabstop>checkBox_autoPowerOn</tabstop>
   <tabstop>checkBox_netRigctl</tabstop>
   <tabstop>lineEdit_ip</tabstop>
  </tabstops>
@@ -268,8 +400,8 @@
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>259</x>
-     <y>324</y>
+     <x>270</x>
+     <y>688</y>
     </hint>
     <hint type="destinationlabel">
      <x>157</x>
@@ -284,8 +416,8 @@
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>327</x>
-     <y>324</y>
+     <x>338</x>
+     <y>688</y>
     </hint>
     <hint type="destinationlabel">
      <x>286</x>
