@@ -106,10 +106,14 @@ MainWindow::MainWindow(QWidget *parent)
 
     //* Load settings from catradio.ini
     QSettings configFile(QString("catradio.ini"), QSettings::IniFormat);
-    rigCom.rigModel = configFile.value("rigModel", 0).toInt();
+    rigCom.rigModel = configFile.value("rigModel", 0).toUInt();
     rigCom.rigPort = configFile.value("rigPort").toString();
-    rigCom.serialSpeed = configFile.value("serialSpeed", 9600).toInt();
+    rigCom.serialSpeed = configFile.value("serialSpeed", 9600).toUInt();
     rigCom.civAddr = configFile.value("civAddress", 0).toInt();
+    rigCom.serialDataBits = configFile.value("serialDataBits", 8).toUInt();
+    rigCom.serialParity = configFile.value("serialParity", 0).toUInt();
+    rigCom.serialStopBits = configFile.value("serialStopBits", 2).toUInt();
+    rigCom.serialHandshake = configFile.value("serialHandshake", 0).toUInt();
     rigCom.netRigctl = configFile.value("netRigctl", false).toBool();
     rigCom.rigRefresh = configFile.value("rigRefresh", 100).toInt();
     rigCom.fullPoll = configFile.value("fullPolling", true).toBool();
